# hello-azure-service-bus

./: .env  README.md  compose.yaml  service_bus_config.json
logger/: README.md  logger.py  pyproject.toml
receiver/: Dockerfile  README.md  pyproject.toml
receiver/src/: receiver.py
sender/: .env  Dockerfile  README.md  logging-config.yaml  pyproject.toml
sender/app/: __init__.py  main.py
sender/src/: sender.py
